sass/styles/layout.scss
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Urbanist", sans-serif;
  font-weight: bolder;
}
p,
li,
span {
  font-family: "Roboto", sans-serif;
  font-weight: normal;
}
a {
  text-decoration: none;

  &:visited {
    color: blue;
  }

  &:hover {
    color: blueviolet;
  }
}

body {
  // margin-bottom: 30px;
  margin: 0;
}

.mobile-hidden {
  @media only screen and (max-width: 650px) {
    display: none;
  }
}

.yt-embed {
  width: 100%;
  height: 400px;

  iframe {
    width: 100%;
    height: 100%;
  }
}

.container {
  max-width: 700px;
  margin: auto;
}

.profile-card {
  margin-top: 30px;
  margin-bottom: 30px;
  margin-left: auto;
  margin-right: auto;

  .row {
    width: max-content;
    max-width: 95vw;
    margin: auto;
    overflow-wrap: normal;

    .headshot-container {
      display: inline-block;
      max-width: 150px;
      @media only screen and (max-width: 382px) {
        display: block;
        margin: auto;
      }
      img {
        width: 100%;
      }
    }
    .text-container {
      display: inline-block;
      margin-left: 20px;
      h1,
      p {
        margin: 0px;
        a {
          text-decoration: none;
        }
      }
    }
  }
}

.navigation-bar {
  text-align: center;
  p {
    margin: 0px;
    a {
      text-decoration: none;
    }
  }
}

.blog-post-li {
  margin: 0.25em;
}

.gray {
  color: gray;
}

ul {
  padding-left: 20px;
}

.events-list {
  & > li {
    color: gray;
  }
  & > ul {
    & > li {
      & > div {
        display: table-row;
        & > span {
          display: table-cell;

          &:first-of-type {
            color: gray;
            width: 30px;
            letter-spacing: -0.35em;
            text-align: center;
            padding-right: 8px;
            text-transform: full-width;
          }
        }
      }
    }
  }
}

.mermaid {
  width: fit-content;
  margin: auto;
}

.zola-github-card {
  border-radius: 5px;
  padding-top: 5px;
  padding-bottom: 1px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  transition: all 0.1s ease 0s;

  &:hover {
    box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 15px;
  }
}

#instagram-embed-0 {
  margin: auto !important;
}

.tiktok-embed {
  border: none !important;
  margin: auto !important;
}

.markdown-body table {
  margin: auto !important;
  width: fit-content !important;
}

.blog-post-listing-item {
  color: black !important;
  & > div {
    border-left: solid rgb(201, 201, 201) 5px;
    &:hover {
      border-left: solid black 5px;
    }
    padding-left: 5px;
  }

  h4,
  h1,
  p {
    padding: 0;
    margin: 0;
  }

  h1 {
    margin-bottom: 10px;
  }

  &:hover {
    color: rgb(85, 85, 85) !important;
  }
}

.pn-previous,
.pn-next {
  border: 1px solid black;
  border-radius: 5px;
  padding: 5px;
  color: black !important;
  &:hover {
    color: rgb(85, 85, 85) !important;
    border: 1px solid rgb(85, 85, 85) !important;
  }
}

#footer {
  background-color: rgb(201, 201, 201);
  padding: 10px;
  font-size: 0.8em;
  color: black;
  margin-top: 30px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}

.carded-section {
  border: 1px solid black;
  width: 100%;

  & > .header {
    background-color: aliceblue;
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 15px;
    padding-bottom: 15px;

    border-bottom: 1px solid rgb(201, 201, 201);
    & > span {
      font-size: 1.5em;
      font-weight: bolder;
    }
  }
  & > .content {
    padding-left: 15px;
    padding-right: 15px;
  }
}

